kubernetes/for-fd/database.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  serviceName: "mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-pods

        image: mongo:3.4-jessie
        imagePullPolicy: Always
        
        ports:
        - containerPort: 27017

        resources:
          limits:
            memory: "512M"
            cpu: "0.25"

---

kind: Service
apiVersion: v1
metadata:
  name: mongodb-svc
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb
