kubernetes/for-fd/frontend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 12
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-pods

        image: bcdemo.azurecr.io/smilr/frontend:stable
        imagePullPolicy: Always

        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 20

        ports:
        - containerPort: 3000
        
        resources:
          limits:
            memory: "160M"
            cpu: "0.5"

---

kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: frontend

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "smilr-ingress"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: futuredecoded.benco.io
    http:
      paths:
      - path: /api
        backend:
          serviceName: data-api-svc
          servicePort: 80
      - path: /
        backend:
          serviceName: frontend-svc
          servicePort: 80
